# ContextOS-Core

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  ContextOS_Architecture.md  LICENSE  PROJECT_STRUCTURE.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  ROADMAP_v2.md  SECURITY.md  TECH_DEBT.md  benchmark_report_final.md  pyproject.toml
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
config/: settings.yaml
contextos/: .gitignore  CHANGELOG.md  README.md  __init__.py  config.py  exceptions.py
contextos/ai_adapter/: __init__.py  base.py  claude_adapter.py  mock_adapter.py  openai_adapter.py
contextos/benchmark/: __init__.py  benchmark_runner.py  metrics.py  report.py
contextos/cli/: __init__.py  console.py  main.py  output.py
contextos/cli/commands/: ask_cmd.py  (+6 more)
contextos/compression/: __init__.py  aggressive.py  base.py  light.py  medium.py
contextos/context_builder/: __init__.py  builder.py
contextos/contextos/: __init__.py  config.py
contextos/docs/: USAGE.md
contextos/evaluation/: __init__.py  metrics.py  runner.py
contextos/formatting/: __init__.py  sources.py
contextos/indexer/: __init__.py  hasher.py  indexer.py
contextos/logging/: __init__.py  logger.py
contextos/memory/: __init__.py  db.py  models.py  repository.py
contextos/parsers/: __init__.py  base.py  code_parser.py  text_parser.py
contextos/performance/: __init__.py  profiling.py
contextos/readers/: __init__.py  base.py  code_reader.py  detector.py  docx_reader.py  pdf_reader.py  text_reader.py
contextos/retrieval/: __init__.py  base.py  bm25_retriever.py  future_embedding_retriever.py  future_hybrid_retriever.py  providers.py
contextos/sample_data/: code_notes.md  context_principles.md  local_architecture.md
contextos/tests/: test_ai_adapter.py  test_context_builder.py  test_indexer.py  test_token_budget_selector.py
contextos/token_budget/: __init__.py  savings.py  selector.py
contextos/tokenizer/: __init__.py
docs/: BENCHMARK.md  DESKTOP_APP.md  LIMITATIONS.md  PERFORMANCE.md  RETRIEVAL_V2.md  USAGE.md
docs/diagrams/: contextos_pipeline.mmd  retrieval_providers.mmd  sqlite_schema.mmd
docs/screenshots/: README.md
sample_data/benchmark/: context_notes.md  local_retrieval.md  portfolio_token_savings.md  token_savings.md
tests/: test_benchmark.py  test_benchmark_command.py  test_benchmark_report.py  test_bm25_retriever.py  test_cli.py  test_cli_dx.py  test_cli_output.py  test_compression.py  test_config.py  test_evaluation.py  test_exceptions.py  test_local_pipeline_integration.py  test_logging.py  test_memory_repository.py  test_parsers.py  test_performance.py  test_readers.py  test_retrieval_providers.py  test_source_formatting.py  test_token_savings.py
(+42 files in other folders)
