[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextos-core"
version = "0.1.0"
description = "Local-first CLI-based AI Context Management System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "rank-bm25>=0.2.2",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
code = [
    "tree-sitter>=0.22.0",
]

[project.scripts]
context = "contextos.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
