[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextos-core"
version = "1.1.0"
description = "Local-first CLI-based AI Context Management System"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "ContextOS Core contributors" },
]
keywords = [
    "ai",
    "bm25",
    "cli",
    "context-management",
    "local-first",
    "sqlite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "rank-bm25>=0.2.2",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/ZENCalbee-010/ContextOS-Core"
Repository = "https://github.com/ZENCalbee-010/ContextOS-Core"
Documentation = "https://github.com/ZENCalbee-010/ContextOS-Core/tree/main/docs"
Issues = "https://github.com/ZENCalbee-010/ContextOS-Core/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
code = [
    "tree-sitter>=0.22.0",
]

[project.scripts]
context = "contextos.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["contextos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
