[package]
name = "contextos-desktop"
version = "0.1.0"
description = "Desktop wrapper for ContextOS Core"
authors = ["ContextOS Core contributors"]
license = "MIT"
repository = "https://github.com/ZENCalbee-010/ContextOS-Core"
edition = "2021"

[lib]
name = "contextos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
